--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -7,13 +7,12 @@ body {
   scroll-behavior: smooth;
 }
 .hero-bg {
-  background: linear-gradient(180deg, #f4efe88f 0%, #faf8f500 100%),
-              url('/assets/images/hero-bg.png');
+  background: linear-gradient(180deg, #f4efe88f 0%, #faf8f500 100%);
+             
   background-size: cover;
   background-repeat: no-repeat;
    background-position:
-    center top,     
-    center 90px; 
+    center 
 }
 
 
