--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -172,6 +172,42 @@
   .relative {
     position: relative;
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
+  .top-12 {
+    top: calc(var(--spacing) * 12);
+  }
+  .top-16 {
+    top: calc(var(--spacing) * 16);
+  }
+  .top-32 {
+    top: calc(var(--spacing) * 32);
+  }
+  .top-\[18\%\] {
+    top: 18%;
+  }
+  .top-\[19\%\] {
+    top: 19%;
+  }
+  .top-\[20\%\] {
+    top: 20%;
+  }
+  .top-\[55\%\] {
+    top: 55%;
+  }
+  .top-\[60\%\] {
+    top: 60%;
+  }
+  .top-\[70\%\] {
+    top: 70%;
+  }
+  .top-\[70px\] {
+    top: 70px;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -181,17 +217,44 @@
   .right-\[14px\] {
     right: 14px;
   }
+  .-bottom-6 {
+    bottom: calc(var(--spacing) * -6);
+  }
+  .-bottom-8 {
+    bottom: calc(var(--spacing) * -8);
+  }
+  .-bottom-12 {
+    bottom: calc(var(--spacing) * -12);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .bottom-6 {
+    bottom: calc(var(--spacing) * 6);
+  }
   .bottom-\[35\%\] {
     bottom: 35%;
+  }
+  .-left-6 {
+    left: calc(var(--spacing) * -6);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
   .left-\[14px\] {
     left: 14px;
+  }
+  .left-\[20\%\] {
+    left: 20%;
+  }
+  .left-\[40\%\] {
+    left: 40%;
+  }
+  .z-0 {
+    z-index: 0;
+  }
+  .z-20 {
+    z-index: 20;
   }
   .z-50 {
     z-index: 50;
@@ -216,6 +279,9 @@
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .-mt-4 {
+    margin-top: calc(var(--spacing) * -4);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -250,9 +316,6 @@
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
   }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
-  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -276,6 +339,9 @@
   }
   .inline-flex {
     display: inline-flex;
+  }
+  .table {
+    display: table;
   }
   .size-4 {
     width: calc(var(--spacing) * 4);
@@ -326,8 +392,35 @@
   .w-\[88\%\] {
     width: 88%;
   }
-  .w-\[720px\] {
-    width: 720px;
+  .w-\[90\%\] {
+    width: 90%;
+  }
+  .w-\[150px\] {
+    width: 150px;
+  }
+  .w-\[200px\] {
+    width: 200px;
+  }
+  .w-\[220px\] {
+    width: 220px;
+  }
+  .w-\[250px\] {
+    width: 250px;
+  }
+  .w-\[300px\] {
+    width: 300px;
+  }
+  .w-\[380px\] {
+    width: 380px;
+  }
+  .w-\[400px\] {
+    width: 400px;
+  }
+  .w-\[420px\] {
+    width: 420px;
+  }
+  .w-\[600px\] {
+    width: 600px;
   }
   .w-auto {
     width: auto;
@@ -340,6 +433,9 @@
   }
   .max-w-\[1440px\] {
     max-width: 1440px;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
@@ -357,6 +453,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -402,9 +501,6 @@
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
-  }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
@@ -560,6 +656,9 @@
   }
   .py-\[10px\] {
     padding-block: 10px;
+  }
+  .py-\[14px\] {
+    padding-block: 14px;
   }
   .py-\[48px\] {
     padding-block: 48px;
@@ -749,8 +848,15 @@
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .blur {
     --tw-blur: blur(8px);
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
@@ -851,6 +957,26 @@
   .lg\:relative {
     @media (width >= 64rem) {
       position: relative;
+    }
+  }
+  .lg\:top-\[19\%\] {
+    @media (width >= 64rem) {
+      top: 19%;
+    }
+  }
+  .lg\:-bottom-12 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -12);
+    }
+  }
+  .lg\:left-0 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:left-\[20\%\] {
+    @media (width >= 64rem) {
+      left: 20%;
     }
   }
   .lg\:order-1 {
@@ -958,11 +1084,6 @@
       margin-left: calc(var(--spacing) * -12);
     }
   }
-  .lg\:ml-10 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 10);
-    }
-  }
   .lg\:block {
     @media (width >= 64rem) {
       display: block;
@@ -1015,6 +1136,11 @@
       width: 124px;
     }
   }
+  .lg\:w-\[134px\] {
+    @media (width >= 64rem) {
+      width: 134px;
+    }
+  }
   .lg\:w-\[200px\] {
     @media (width >= 64rem) {
       width: 200px;
@@ -1025,9 +1151,19 @@
       width: 216px;
     }
   }
+  .lg\:w-\[380px\] {
+    @media (width >= 64rem) {
+      width: 380px;
+    }
+  }
   .lg\:w-\[390px\] {
     @media (width >= 64rem) {
       width: 390px;
+    }
+  }
+  .lg\:w-\[418px\] {
+    @media (width >= 64rem) {
+      width: 418px;
     }
   }
   .lg\:w-\[450px\] {
@@ -1131,19 +1267,24 @@
       padding-inline: calc(var(--spacing) * 8);
     }
   }
+  .lg\:px-\[44px\] {
+    @media (width >= 64rem) {
+      padding-inline: 44px;
+    }
+  }
   .lg\:px-\[64px\] {
     @media (width >= 64rem) {
       padding-inline: 64px;
     }
   }
-  .lg\:py-16 {
+  .lg\:pt-12 {
     @media (width >= 64rem) {
-      padding-block: calc(var(--spacing) * 16);
+      padding-top: calc(var(--spacing) * 12);
     }
   }
-  .lg\:pt-4 {
+  .lg\:pt-16 {
     @media (width >= 64rem) {
-      padding-top: calc(var(--spacing) * 4);
+      padding-top: calc(var(--spacing) * 16);
     }
   }
   .lg\:pt-\[32px\] {
@@ -1164,6 +1305,11 @@
   .lg\:pb-2 {
     @media (width >= 64rem) {
       padding-bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .lg\:pb-20 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 20);
     }
   }
   .lg\:pb-\[48px\] {
@@ -1231,14 +1377,14 @@
       font-size: 48px;
     }
   }
-  .lg\:text-\[52px\] {
+  .lg\:text-\[56px\] {
     @media (width >= 64rem) {
-      font-size: 52px;
+      font-size: 56px;
     }
   }
-  .lg\:text-\[65px\] {
+  .lg\:text-\[72px\] {
     @media (width >= 64rem) {
-      font-size: 65px;
+      font-size: 72px;
     }
   }
   .lg\:leading-\[64px\] {
@@ -1266,9 +1412,34 @@
       }
     }
   }
+  .xl\:top-6 {
+    @media (width >= 80rem) {
+      top: calc(var(--spacing) * 6);
+    }
+  }
+  .xl\:top-8 {
+    @media (width >= 80rem) {
+      top: calc(var(--spacing) * 8);
+    }
+  }
+  .xl\:top-12 {
+    @media (width >= 80rem) {
+      top: calc(var(--spacing) * 12);
+    }
+  }
+  .xl\:top-20 {
+    @media (width >= 80rem) {
+      top: calc(var(--spacing) * 20);
+    }
+  }
   .xl\:ml-32 {
     @media (width >= 80rem) {
       margin-left: calc(var(--spacing) * 32);
+    }
+  }
+  .xl\:block {
+    @media (width >= 80rem) {
+      display: block;
     }
   }
   .xl\:w-\[490px\] {
@@ -1279,6 +1450,11 @@
   .xl\:w-\[927px\] {
     @media (width >= 80rem) {
       width: 927px;
+    }
+  }
+  .xl\:w-full {
+    @media (width >= 80rem) {
+      width: 100%;
     }
   }
   .xl\:gap-36 {
@@ -1308,10 +1484,10 @@ html, body {
   scroll-behavior: smooth;
 }
 .hero-bg {
-  background: linear-gradient(180deg, #f4efe88f 0%, #faf8f500 100%), url('/assets/images/hero-bg.png');
+  background: linear-gradient(180deg, #f4efe88f 0%, #faf8f500 100%);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center top, center 90px;
+  background-position: center;
 }
 .gradient-bg {
   background: var(--Beige-BG, linear-gradient(180deg, #F4EFE8 0%, #FAF8F5 100%));
@@ -1452,6 +1628,11 @@ html, body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -1509,11 +1690,6 @@ html, body {
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1544,6 +1720,7 @@ html, body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -1558,7 +1735,6 @@ html, body {
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
-      --tw-outline-style: solid;
     }
   }
 }
