--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -433,6 +433,13 @@
   .gap-32 {
     gap: calc(var(--spacing) * 32);
   }
+  .space-y-2 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .space-y-4 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -1112,6 +1119,11 @@
   .lg\:grid-cols-\[300px_1fr\] {
     @media (width >= 64rem) {
       grid-template-columns: 300px 1fr;
+    }
+  }
+  .lg\:grid-cols-\[320px_1fr\] {
+    @media (width >= 64rem) {
+      grid-template-columns: 320px 1fr;
     }
   }
   .lg\:flex-row {
